--- a/style.css
+++ b/style.css
@@ -12,84 +12,81 @@ body {
     margin: 0;
 }
 .container{
-    background-color: #fff;
-    border-radius: 6px;
-    overflow: hidden;
-    box-shadow:0 2px 5px rgba(0,0,0,0.5);
-    width: 400px;
-    max-width: 100%;
+   background-color: #fff;
+   overflow: hidden;
+   border-radius: 5px;
+   box-shadow: 0 3px 5px rgba(0,0,0,0.6);
+   width: 400px;
+   max-width: 100%;
+
 }
 .header{
-    background-color: #f7f7f7;
-    border-bottom: 1px solid 	#BDB76B;
-    padding: 20px 40px;
+    border-bottom: 2px solid #bdbdbd;
+    padding:15px 30px;
 }
-.header h2{
+.h1{
     margin: 0;
 }
 .form{
-    padding: 30px 40px;
+    padding:20px 30px;
 }
 .form-control{
-    margin-bottom: 10px;
+    margin-bottom:10px;
     padding-bottom: 20px;
     position: relative;
 }
 .form-control label{
-   display: inline-block;
+    display: inline-block;
     margin-bottom: 5px;
 }
 .form-control input{
     border: 2px solid #BDB76B;
-    border-radius: 3px;
-    display: block;
-    font-size: 14px;
-    padding:10px;
-    font-family: inherit;
+    border-radius: 4px;
     width: 100%;
-
+    display: block;
+    padding: 8px;
+    font-family: inherit;
 }
-
 .form-control.success input{
     border-color: #2ecc71;
-    
 }
 .form-control.error input{
     border-color: #e74c3c;
-    
 }
-.form-control i {
+.form-control i{
     position: absolute;
     top: 40px;
     right: 10px;
     visibility: hidden;
 }
-.form-control.success i.fa-check-circle {
+.form-control.success i.fa-check-circle{
     color: #2ecc71;
     visibility: visible;
 }
-.form-control.error i.fa-exclamation-circle {
+.form-control.error i.fa-exclamation-circle{
     color: #e74c3c;
     visibility: visible;
 }
 .form-control small{
-    visibility: hidden;
     position: absolute;
+    visibility: hidden;
     bottom: 0;
     left: 0;
+
+  
 }
 .form-control.error small{
-    visibility: visible;
     color: #e74c3c;
+    visibility: visible;
 }
 .form button{
     background-color: #008080;
-    border: 2px solid #008080;
-    border-radius: 3px;
     color: #fff;
-    display: block;
-    padding: 10px;
-    font-size: 15px;
+    border: 3px solid #008080;
+    border-radius:4px;
     font-family: inherit;
+    font-size:15px;
+    display: block;
+    padding:6px;
     width: 100%;
 }
